Feature 2: Fully implemented, addNode and addNodes. Updated base gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-.kotlin
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
@@ -12,15 +11,6 @@ target/
 *.iws
 *.iml
 *.ipr
-
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
 
 ### NetBeans ###
 /nbproject/private/
@@ -37,3 +27,8 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+### Java ###
+*.class
+hs_err_pid*
+
